# 365

./: .gitignore  README.md
19/: .electron.d.ts  .gitignore  .pnp.cjs  NOTES_APP_README.md  QUICKSTART.md  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
19/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
cpp/: .gitignore  CMakeLists.txt  README.md  emscripten.profile  main.cpp
cpp/lib/: CMakeLists.txt
cpp/lib/dsa/: CMakeLists.txt
cpp/lib/dsa/export/dsa/: readfile.cpp  readfile.h
cpp/lib/dsa/internal/dsa/: 88-merge-sorted-array.cpp
cpp/lib/helpers/: CMakeLists.txt
cpp/lib/helpers/export/helpers/: returnNumber.cpp  returnNumber.h
cpp/lib/helpers/internal/helpers/: returnInternalNumber.cpp  returnInternalNumber.h
cpp/lib/imageprocessing/: CMakeLists.txt
cpp/lib/imageprocessing/export/imageprocessing/: blurFace.cpp  blurFace.h  removeBackground.cpp  removeBackground.h
cpp/scripts/: conan_install.sh
electron/: .gitignore  README.md  index.html  main.js  main.ts  package.json  preload.js  preload.ts  renderer.js
electron/src/: main.ts
java/: README.md
java/fckjvm/: .gitignore  CLAUDE.md  build.gradle.kts  docker-compose.yml  postgres-v-redis.md  settings.gradle.kts
php/: .gitignore  hello.php  notes.db  notes.html  notes.php  playground.db  sql-playground.html  sql-playground.php
posts/: (old)fwd:enums.md  fwd:enums.md  git-got-gut.md
posts/enums-benchmark/: .bench-results.txt  .gitignore  .sizes-results.txt  .treeshake-results.txt  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsc.json
rust/: README.md
rust/book/: notes.md
rust/cad/: Cargo.toml  README.md  index.html
rust/cad/src/: boundary.rs  collision.rs  lib.rs  polygon.rs  scene.rs  transform.rs
rust/cad/tests/: integration.rs
rust/eddy-rs/: Cargo.toml
rust/eddy-rs/src/: blueprint.rs  consts.rs  lib.rs  main.rs  shared.rs  types.rs
rust/eddy-rs/src/languages/: go.rs  mod.rs
rust/eddy-rs/src/languages/cpp/: bazel.rs  cmake.rs  conan.rs  mod.rs  ninja.rs
rust/eddy-rs/tests/: bazel.rs  cmake.rs  conan.rs  go.rs  ninja.rs  shared.rs
rust/eddy-rs/tests/common/: mod.rs
rust/vvscode/: Cargo.toml
typescript/19/: package.json  (+1 more)
utils/: canvas.js  mem.js  smtp.md
webgpu/: index.html  readme.md
webrtc/: index.html  index.js  index.ts  main.css  p2p-vs-sfu.md  package-lock.json  package.json  screen-share-sfu.md
(+654 files in other folders)
